Fix white space between Logo and Pages

--- a/src/css/component/logo.css
+++ b/src/css/component/logo.css
@@ -7,4 +7,5 @@
 
 .logo a {
 	color: inherit;
+	margin-right: var(--space-small);
 }
